[gd_scene load_steps=9 format=3 uid="uid://b5uc7iqtucmws"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1_6iyd5"]
[ext_resource type="PackedScene" uid="uid://cgmi8axpua2u5" path="res://Ship/Ship.tscn" id="1_bypu3"]
[ext_resource type="PackedScene" uid="uid://yhijrjk7ninl" path="res://ScoreBoard/ScoreBoard.tscn" id="4_5b10y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p76ef"]
albedo_color = Color(0.211765, 0.152941, 0.137255, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_dsgws"]
size = Vector2(27.815, 14.6)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_q4c84"]
sky_top_color = Color(0.490196, 0.443137, 0.368627, 1)
sky_horizon_color = Color(0.356863, 0.341176, 0.317647, 1)
ground_horizon_color = Color(0.403922, 0.388235, 0.360784, 1)

[sub_resource type="Sky" id="Sky_b8i41"]
sky_material = SubResource("ProceduralSkyMaterial_q4c84")

[sub_resource type="Environment" id="Environment_wf1hj"]
background_mode = 2
background_color = Color(0.219608, 0.219608, 0.219608, 1)
sky = SubResource("Sky_b8i41")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node"]
script = ExtResource("1_6iyd5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_p76ef")
mesh = SubResource("PlaneMesh_dsgws")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.658269, -0.651929, 0.376391, 1.99638e-09, 0.5, 0.866025, -0.752783, -0.570078, 0.329134, 9.51382, 6.62323, -9.53674e-07)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wf1hj")

[node name="Ship" parent="." instance=ExtResource("1_bypu3")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.17453, 11.7933)
fov = 67.5

[node name="ScoreBoard" parent="." instance=ExtResource("4_5b10y")]
offset_right = 92.0
offset_bottom = 50.0

[node name="GameOver" type="PanelContainer" parent="."]
offset_left = 488.0
offset_top = 234.0
offset_right = 667.0
offset_bottom = 363.0

[node name="VBox" type="VBoxContainer" parent="GameOver"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOver/VBox"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="GameOver/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Play Again?"
